Correction of overflow property in index file (v. 1.2)

--- a/scss/components/_breakpoints.scss
+++ b/scss/components/_breakpoints.scss
@@ -39,6 +39,7 @@
     .flex {
       flex-direction: row;
       justify-content: space-around;
+      padding: 3rem 0;
     }
     .profile__portrait {
       width: 300px;
